--- a/index.gohtml
+++ b/index.gohtml
@@ -32,7 +32,7 @@
         <input id="pdf_file" type="file" name="nf">
         <br><br>
         <label style="color: #0f3e68" for="js_date">
-            Pick up the date (If no date is picked up we will use today's date)
+            Pick up a date (If no date is picked up we will use today's date)
         </label>
         <br>
         <input type="date" id="js_date">
