small change in index.gohtml tpl

--- a/index.gohtml
+++ b/index.gohtml
@@ -37,7 +37,7 @@
         <input id="pdf_file" type="file" name="nf">
         <br><br>
         <label class="colored" for="js_date">
-            Pick up a date (if no date is selected we will use today's date)
+            Pick up a date <br>(if no date is selected we will use today's date)
         </label>
         <br>
         <input type="date" id="js_date">
