adds logger, and fixes request to favicon

--- a/index.gohtml
+++ b/index.gohtml
@@ -6,7 +6,7 @@
     <meta name="text" content="">
     <meta name="author" content="Otto Schuldt">
     <title>App to Sign PDFs</title>
-    <link rel="shortcut icon" href="/style/images/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
     <style>
         .centered {
             position: fixed;
